--- a/css/styles.css
+++ b/css/styles.css
@@ -212,6 +212,47 @@ body {
   border-radius: 18px;
 }
 
+.burger_menu {
+  display: none;
+}
+
+@media (max-width: 991px) {
+  .container {
+    padding: 0 16px;
+  }
+
+  .logotype {
+    margin-right: 0;
+  }
+
+  .border {
+    padding: 10px 0px 10px;
+  }
+
+  .navbar {
+    display: none;
+  }
+
+  .burger_menu {
+    display: block;
+    margin-left: 30px;
+  }
+
+  .elements {
+    justify-content: flex-end;
+  }
+}
+
+@media (max-width: 600px) {
+  .header__buttons {
+    display: none;
+  }
+
+  .border {
+    padding: 20px 0px 20px;
+  }
+}
+
 /* --------------------------END HEADER--------------------------- */
 
 /* ------------------------------HERO SECTION--------------------------------- */
@@ -324,7 +365,8 @@ body {
 
 .hero__image {
   position: relative;
-  margin-right: 10%;
+  max-width: 40%;
+  margin-right: 11%;
 }
 
 .hero_image_before {
@@ -343,10 +385,227 @@ body {
   background-color: #6c5fbc;
 }
 
+.meal-modal {
+  position: absolute;
+  top: -10%;
+  left: 45%;
+  background-color: #fff;
+  display: flex;
+  box-shadow: -7px 9px 15px 0 rgba(0, 0, 0, 0.15);
+  border-radius: 12px;
+  padding: 4px 16px 4px 7px;
+  width: 65%;
+}
+
+.meal-modal::before {
+  content: "";
+  position: absolute;
+  top: -50%;
+  right: -15%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 42px;
+  height: 28px;
+  background-image: url("../images/pattern-1.svg");
+}
+
+.meal-modal::after {
+  content: "";
+  position: absolute;
+  bottom: -150%;
+  right: 3%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 80px;
+  height: 80px;
+
+  z-index: -1;
+}
+.hero-h-meal {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.4;
+  color: #323142;
+  margin-bottom: 5px;
+}
+
+.modal-text {
+  margin-left: 13px;
+  margin-top: 12px;
+}
+
+.hero-p-meal {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 7px;
+  line-height: 1.4;
+  color: #323142;
+}
+
+.hero-meal-time {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 7px;
+  line-height: 1.4;
+  color: #acadb9;
+  display: flex;
+  margin-left: auto;
+  margin-bottom: 10px;
+  align-items: flex-end;
+}
+
+.graph-modal {
+  position: absolute;
+  bottom: -5%;
+  left: 5%;
+  max-width: 50%;
+  background-color: #fff;
+  border: 0.2px solid #edf2f7;
+  box-shadow: 10px 13px 27px 0 rgba(26, 32, 44, 0.15);
+  border-radius: 12px;
+  width: 147px;
+  padding: 8px 0;
+  object-fit: contain;
+}
+
+.graph-modal::before {
+  content: "";
+  width: 36px;
+  height: 36px;
+  position: absolute;
+  bottom: -30%;
+  left: -30%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("../images/pattern-2.svg");
+}
+
 @media (max-width: 991px) {
   .hero-title {
     font-size: 60px;
   }
+
+  .graph-modal {
+    width: 130px;
+  }
+
+  .meal-modal {
+    width: 60%;
+  }
 }
 
+@media (max-width: 768px) {
+  .hero__container {
+    flex-direction: column;
+  }
+
+  .hero-text-second {
+    text-align: center;
+  }
+
+  .hero__block {
+    text-align: center;
+  }
+
+  .rating__content {
+    justify-content: center;
+    margin-bottom: 100px;
+  }
+
+  .hero__image {
+    max-width: 80%;
+    margin-right: 3%;
+  }
+
+  .hero__buttons {
+    justify-content: center;
+  }
+}
+
+@media (max-width: 480px) {
+  .graph-modal {
+    width: 110px;
+  }
+
+  .hero-title {
+    font-weight: 600;
+    font-size: 46px;
+  }
+  .hero-text-second {
+    font-size: 11px;
+  }
+
+  .hero-text-first {
+    color: rgba(32, 31, 31, 1);
+    font-size: 9px;
+    padding-left: 44px;
+  }
+
+  .hero-text-first::before {
+    background-color: rgba(32, 31, 31, 1);
+    width: 34px;
+  }
+
+  .started__btn,
+  .pro__btn {
+    font-size: 13px;
+    font-weight: 500;
+    padding: 15px 25px;
+  }
+
+  .trustpilot-svg {
+    width: 99px;
+    height: 25px;
+  }
+
+  .rating__stars svg {
+    width: 14px;
+    height: 13px;
+  }
+
+  .rating__numbers {
+    font-size: 12px;
+  }
+}
+.meal-modal::before {
+  right: -5%;
+}
+
+@media (max-width: 380px) {
+  .graph-modal {
+    width: 85px;
+  }
+  .graph-modal::before {
+    width: 26px;
+    height: 26px;
+  }
+
+  .meal-modal {
+    width: 55%;
+  }
+
+  .meal-modal::before {
+    width: 32px;
+    height: 18px;
+  }
+
+  .hero-h-meal {
+    font-size: 7px;
+    margin-bottom: 1px;
+  }
+
+  .hero-meal-time {
+    font-size: 6px;
+  }
+
+  .hero-p-meal {
+    font-size: 6px;
+  }
+
+  .food_image {
+    width: 47px;
+    height: 47px;
+  }
+}
 /* ------------------------------END HERO SECTION--------------------------------- */
