--- a/css/styles.css
+++ b/css/styles.css
@@ -495,6 +495,10 @@ body {
 }
 
 @media (max-width: 768px) {
+  .hero {
+    padding: 180px 0 130px;
+  }
+
   .hero__container {
     flex-direction: column;
   }
@@ -522,6 +526,10 @@ body {
 }
 
 @media (max-width: 480px) {
+  .hero {
+    padding: 140px 0 130px;
+  }
+
   .hero-title {
     font-weight: 600;
     font-size: 46px;
@@ -538,6 +546,7 @@ body {
 
   .hero-text-first::before {
     background-color: rgba(32, 31, 31, 1);
+    height: 1px;
     width: 34px;
   }
 
@@ -603,3 +612,67 @@ body {
   }
 }
 /* ------------------------------END HERO SECTION--------------------------------- */
+
+.features {
+  background-color: #5c4eae;
+  padding: 55px 0;
+}
+
+.features_container {
+}
+.features-list {
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+}
+.features-ul {
+  display: flex;
+
+  justify-content: center;
+}
+
+.features-ul li {
+  padding: 0 30px;
+  border-right: 1px solid #c5c5c5;
+}
+
+.features-ul li:last-child {
+  border: none;
+}
+
+.features-h {
+  font-family: "Public Sans", sans-serif;
+  font-weight: 700;
+  font-size: 43px;
+  line-height: 125%;
+  text-align: center;
+  margin-bottom: 20px;
+
+  color: #fff;
+}
+.features-p {
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  line-height: 150%;
+  text-align: center;
+  color: #cbd5e1;
+}
+
+@media (max-width: 768px) {
+  .features-ul {
+    flex-direction: column;
+  }
+
+  .features-ul li {
+    padding: 60px 0;
+    border-right: none;
+    border-bottom: 1px solid rgba(197, 197, 197, 0.25);
+  }
+
+  .features-h {
+    font-size: 35px;
+  }
+  .features-p {
+    font-size: 14px;
+  }
+}
