--- a/css/styles.css
+++ b/css/styles.css
@@ -613,6 +613,8 @@ body {
 }
 /* ------------------------------END HERO SECTION--------------------------------- */
 
+/* ------------------------------FEATURES SECTION--------------------------------- */
+
 .features {
   background-color: #5c4eae;
   padding: 55px 0;
@@ -674,5 +676,95 @@ body {
   }
   .features-p {
     font-size: 14px;
+  }
+}
+
+/* ------------------------------END FEATURES SECTION--------------------------------- */
+.third-h {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 44px;
+  line-height: 1.14;
+  text-transform: capitalize;
+  color: #18181b;
+  margin-bottom: 45px;
+}
+
+.third-text {
+  margin-top: 65px;
+  flex: 0 1 50%;
+}
+
+.third__container {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 80px 0;
+}
+
+.third-ul {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  margin-bottom: 60px;
+}
+
+.third-ul li {
+  list-style: disc;
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #676767;
+  margin-left: 25px;
+}
+
+.third-button {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  padding: 15px 20px 15px 26px;
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  line-height: 1.25;
+  color: #fff;
+  background-color: #6c5fbc;
+  border: none;
+  border-radius: 15px;
+}
+
+.tablet-app-mobile {
+  display: none;
+}
+
+.third-button svg {
+  margin-left: 5px;
+}
+
+@media (max-width: 768px) {
+  .third__container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .third-h {
+    text-align: center;
+    margin-bottom: 60px;
+  }
+
+  .third-ul {
+    align-items: center;
+    row-gap: 16px;
+  }
+
+  .third-button {
+    margin: auto;
+    margin-bottom: 150px;
+  }
+
+  .third-main-img {
+    display: none;
+  }
+
+  .tablet-app-mobile {
+    display: flex;
   }
 }
