--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,16 @@ body {
   margin: 0 auto;
 }
 
+h2 {
+  font-family: "Public Sans", sans-serif;
+  font-weight: 700;
+  font-size: 43px;
+  line-height: 125%;
+  margin-bottom: 20px;
+
+  color: #fff;
+}
+
 /* ------------------------------HEADER--------------------------- */
 
 .header {
@@ -160,6 +170,10 @@ body {
   align-items: center;
   padding: 30px 0px 25px;
   flex-grow: 1;
+  border-bottom: 2px solid #cbcbcb;
+}
+
+.third__container {
   border-bottom: 2px solid #cbcbcb;
 }
 
@@ -619,9 +633,6 @@ body {
   background-color: #5c4eae;
   padding: 55px 0;
 }
-
-.features_container {
-}
 .features-list {
   display: flex;
   justify-content: center;
@@ -633,6 +644,10 @@ body {
   justify-content: center;
 }
 
+.features-h {
+  text-align: center;
+}
+
 .features-ul li {
   padding: 0 30px;
   border-right: 1px solid #c5c5c5;
@@ -642,16 +657,6 @@ body {
   border: none;
 }
 
-.features-h {
-  font-family: "Public Sans", sans-serif;
-  font-weight: 700;
-  font-size: 43px;
-  line-height: 125%;
-  text-align: center;
-  margin-bottom: 20px;
-
-  color: #fff;
-}
 .features-p {
   font-family: "Inter", sans-serif;
   font-size: 14px;
@@ -680,6 +685,8 @@ body {
 }
 
 /* ------------------------------END FEATURES SECTION--------------------------------- */
+
+/* ------------------------------DOWNLOAD SECTION--------------------------------- */
 .third-h {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
@@ -698,14 +705,15 @@ body {
 .third__container {
   display: flex;
   justify-content: space-evenly;
-  padding: 80px 0;
+  padding-top: 80px;
+  padding-bottom: 100px;
 }
 
 .third-ul {
   display: flex;
   flex-direction: column;
   row-gap: 20px;
-  margin-bottom: 60px;
+  margin-bottom: 50px;
 }
 
 .third-ul li {
@@ -728,6 +736,7 @@ body {
   color: #fff;
   background-color: #6c5fbc;
   border: none;
+  margin-left: 10px;
   border-radius: 15px;
 }
 
@@ -750,9 +759,36 @@ body {
   position: relative;
 }
 
+.third-main-img {
+  position: relative;
+}
+
 .mobile-decor-second {
   position: absolute;
   left: 200px;
+}
+
+.third-main-img::after {
+  content: "";
+
+  width: 40px;
+  height: 40px;
+  background-image: url("../images/mobile-screen-after.svg");
+  position: absolute;
+  top: -7%;
+  right: -10%;
+  rotate: -40deg;
+}
+
+.third-main-img::before {
+  content: "";
+  position: absolute;
+  bottom: -6%;
+  left: -9%;
+  width: 40px;
+  height: 40px;
+  rotate: 140deg;
+  background-image: url("../images/mobile-screen-after.svg");
 }
 
 @media (max-width: 768px) {
@@ -779,13 +815,31 @@ body {
   .third-main-img {
     order: 1;
   }
-
-  /* .mobile-decor-second {
-    width: 200px;
-    height: 100px;
-    left: 30%;
-    right: 50%;
-    bottom: -190%;
-    rotate: 140deg;
-  } */
 }
+
+@media (max-width: 400px) {
+  .third-main-img::before {
+    top: -9%;
+    left: 5%;
+    rotate: -90deg;
+  }
+
+  .third-main-img::after {
+    top: -9%;
+    right: 5%;
+    rotate: -70deg;
+  }
+}
+
+/* ------------------------------END DOWNLOAD SECTION--------------------------------- */
+
+/* ------------------------------RESTORAUNT SECTION--------------------------------- */
+.restoraunts__container {
+  padding: 100px 0;
+}
+.restoraunts-h {
+  text-align: center;
+  color: #18181b;
+}
+
+/* ------------------------------END RESTORAUNT SECTION--------------------------------- */
