--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,10 @@ body {
   overflow-x: hidden;
 }
 
+a {
+  text-decoration: none;
+}
+
 /* ------------------------------ END RESET--------------------------------- */
 
 .container {
@@ -168,13 +172,13 @@ h2 {
 .border {
   display: flex;
   align-items: center;
-  padding: 30px 0px 25px;
+
   flex-grow: 1;
   border-bottom: 2px solid #cbcbcb;
 }
 
 .logotype {
-  margin-right: 103px;
+  margin-right: 55px;
 }
 
 .elements {
@@ -187,17 +191,46 @@ h2 {
 .navbar ul {
   display: flex;
   gap: 53.5px;
+}
+
+.nav-li {
+  display: block;
+  position: relative;
   font-family: "Inter", sans-serif;
   font-weight: 500;
   font-size: 17px;
   line-height: 1.5;
   text-transform: capitalize;
   color: #606060;
+  padding: 30px 0px 30px;
+  transition: color 250ms ease-in-out;
+}
+
+.nav-li:hover,
+.nav-li:focus {
+  color: #6c5fbc;
+}
+
+.current {
+  color: #5c4dbe;
+  font-weight: 700;
+}
+
+.current::before {
+  content: "";
+  position: absolute;
+  bottom: 5px;
+
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 5px;
+  background-color: #6c5fbc;
 }
 
 .header__buttons {
   display: flex;
-  gap: 9px;
+  gap: 20px;
 }
 .button__login {
   font-family: "Inter", sans-serif;
@@ -208,6 +241,7 @@ h2 {
   color: #606060;
   border: none;
   background-color: transparent;
+  cursor: pointer;
 }
 .button__register {
   font-family: "Inter", sans-serif;
@@ -220,6 +254,7 @@ h2 {
   background-color: #6c5fbc;
   padding: 17px 26px;
   border-radius: 18px;
+  cursor: pointer;
 }
 
 .burger_menu {
@@ -289,7 +324,7 @@ h2 {
   content: "";
   width: 54px;
   height: 2px;
-  background-color: rgba(32, 31, 31, 0.2);
+  background-color: rgba(32, 31, 31, 0.3);
 }
 
 .hero-text-first {
@@ -302,7 +337,7 @@ h2 {
   line-height: 1.2;
   letter-spacing: 0.13em;
   margin-bottom: 18px;
-  color: rgba(32, 31, 31, 0.2);
+  color: rgba(32, 31, 31, 0.5);
 }
 .hero-text-second {
   color: #676767;
