--- a/css/styles.css
+++ b/css/styles.css
@@ -270,6 +270,7 @@ h2 {
   left: 0;
   z-index: 999;
   pointer-events: none;
+  overflow: hidden;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -416,7 +417,7 @@ h2 {
 .content__me {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
-  font-size: 8px;
+  font-size: 10px;
   line-height: 130%;
   color: #6d62ae;
 }
