--- a/css/styles.css
+++ b/css/styles.css
@@ -257,8 +257,16 @@ h2 {
   cursor: pointer;
 }
 
+.unscroll {
+  overflow: hidden;
+}
+
 .burger_menu {
   display: none;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  cursor: pointer;
 }
 
 .burger-overlay {
@@ -270,7 +278,6 @@ h2 {
   left: 0;
   z-index: 999;
   pointer-events: none;
-  overflow: hidden;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -281,8 +288,9 @@ h2 {
   flex-direction: column;
   width: 100vw;
   height: 100vh;
+
+  position: absolute;
   overflow-y: auto;
-  position: relative;
 }
 
 .burger-overlay.is-open {
@@ -299,6 +307,7 @@ h2 {
   height: 20px;
   top: 40px;
   right: 40px;
+  cursor: pointer;
 }
 
 .navbar-burg {
