--- a/css/styles.css
+++ b/css/styles.css
@@ -886,24 +886,33 @@ h2 {
 .restoraunts-h {
   text-align: center;
   color: #18181b;
+  margin-bottom: 85px;
 }
 
 .res_content {
   display: flex;
   justify-content: center;
+  padding: 0 40px;
 }
 
 .res_block_ul {
   display: flex;
+  gap: 30px;
 }
 
 .res_block {
   display: flex;
   border: 1.25px solid #f4f4f6;
-  border-radius: 30px;
-  flex-basis: ((100% - 60px)/3);
+  border-radius: 40px;
+  flex-basis: calc((100% - 60px) / 3);
   box-shadow: 6px 71px 36px 0 rgba(229, 229, 229, 0.7);
   background-color: #fff;
+}
+
+@media (max-width: 768px) {
+  .res_block_ul {
+    flex-direction: column;
+  }
 }
 
 /* ------------------------------END RESTORAUNT SECTION--------------------------------- */
@@ -927,8 +936,8 @@ h2 {
   background-color: #fff;
   display: flex;
   flex-direction: column;
-  width: 100%;
-  height: 100%;
+  width: 100svw;
+  height: 100svh;
 
   position: absolute;
   overflow-y: auto;
