--- a/css/styles.css
+++ b/css/styles.css
@@ -1078,7 +1078,7 @@ h2 {
   opacity: 0;
   top: 0;
   left: 0;
-  overflow-y: auto;
+
   z-index: 999;
   pointer-events: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -1090,6 +1090,8 @@ h2 {
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 100%;
+  overflow-y: auto;
   position: absolute;
 }
 
