--- a/css/styles.css
+++ b/css/styles.css
@@ -1173,7 +1173,8 @@ h2 {
   font-weight: 600;
   font-size: 36px;
   line-height: 1.3;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 15px;
   color: #6c5fbc;
 }
