--- a/css/styles.css
+++ b/css/styles.css
@@ -321,6 +321,13 @@ h2 {
   }
 }
 
+@media (min-width: 1300px) {
+  .border-rest {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
 /* --------------------------END HEADER--------------------------- */
 
 /* ------------------------------HERO SECTION--------------------------------- */
