--- a/css/sign-up.css
+++ b/css/sign-up.css
@@ -203,6 +203,11 @@ button {
   border-radius: 10px;
   border: none;
   background-color: #f5f5f5;
+  transition: background-color cubic-bezier(0.39, 0.575, 0.565, 1) 250ms;
+}
+
+.auth-svg {
+  transition: fill cubic-bezier(0.39, 0.575, 0.565, 1) 250ms;
 }
 
 .or {
@@ -305,6 +310,7 @@ input:focus-within + .icone {
   text-transform: uppercase;
   color: #f3f5f6;
   background-color: #6c5fbc;
+  transition: background-color cubic-bezier(0.39, 0.575, 0.565, 1) 250ms;
 }
 
 .dwn-text {
@@ -346,6 +352,7 @@ input:focus-within + .icone {
   position: relative;
   max-width: 100%;
   margin-bottom: 50px;
+  margin-top: 100px;
 }
 
 .meal-modal {
@@ -357,6 +364,43 @@ input:focus-within + .icone {
   box-shadow: -7px 9px 15px 0 rgba(0, 0, 0, 0.15);
   border-radius: 12px;
   padding: 4px 16px 4px 7px;
+}
+
+.meal-modal::after {
+  content: "";
+  position: absolute;
+  top: -60px;
+  right: 0;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 25px;
+  height: 35px;
+  background-image: url(../images/group2.svg);
+}
+
+.hero__image::before {
+  content: "";
+  position: absolute;
+  top: -40px;
+  left: 20px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 65px;
+  height: 80px;
+  background-image: url(../images/group1.svg);
+}
+
+.hero__image::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: -10px;
+
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 65px;
+  height: 60px;
+  background-image: url(../images/Vector.svg);
 }
 
 .hero-h-meal {
@@ -427,6 +471,7 @@ input:focus-within + .icone {
   letter-spacing: 0.01em;
   text-align: center;
   color: #ffffffb2;
+  padding: 0 15px;
 }
 
 @media (max-width: 950px) {
@@ -452,5 +497,19 @@ input:focus-within + .icone {
 
   .meal-modal {
     left: 51%;
+  }
+}
+
+@media (hover: hover) {
+  .auth-buttons button:hover {
+    background-color: #5c4dba;
+  }
+
+  .auth-buttons button:hover .auth-svg {
+    fill: #edf2f7;
+  }
+
+  .submit-btn:hover {
+    background-color: #5144aa;
   }
 }
